[gd_scene load_steps=2 format=3 uid="uid://cpgmiqm77p2cq"]

[ext_resource type="Script" path="res://scenes/settings.gd" id="1_6as7x"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_6as7x")

[node name="TabBar" type="TabContainer" parent="."]
custom_minimum_size = Vector2(400, 500)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -300.0
offset_right = 180.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 0

[node name="BASIC" type="Control" parent="TabBar"]
layout_mode = 2
metadata/_tab_index = 0

[node name="Margin" type="MarginContainer" parent="TabBar/BASIC"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="TabBar/BASIC/Margin"]
layout_mode = 2

[node name="LABEL_title" type="HBoxContainer" parent="TabBar/BASIC/Margin/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="TabBar/BASIC/Margin/VBox/LABEL_title"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "基本设置"
horizontal_alignment = 1

[node name="AutoOpen" type="HBoxContainer" parent="TabBar/BASIC/Margin/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="TabBar/BASIC/Margin/VBox/AutoOpen"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "自动打开最近的文件"

[node name="CheckButton" type="CheckButton" parent="TabBar/BASIC/Margin/VBox/AutoOpen"]
layout_mode = 2

[node name="AutoSave" type="HBoxContainer" parent="TabBar/BASIC/Margin/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="TabBar/BASIC/Margin/VBox/AutoSave"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "自动保存"

[node name="CheckButton" type="CheckButton" parent="TabBar/BASIC/Margin/VBox/AutoSave"]
layout_mode = 2

[node name="CharCount" type="HBoxContainer" parent="TabBar/BASIC/Margin/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="TabBar/BASIC/Margin/VBox/CharCount"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "底部显示字数"

[node name="CheckButton" type="CheckButton" parent="TabBar/BASIC/Margin/VBox/CharCount"]
layout_mode = 2

[node name="WrapLine" type="HBoxContainer" parent="TabBar/BASIC/Margin/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="TabBar/BASIC/Margin/VBox/WrapLine"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "文本换行"

[node name="CheckButton" type="CheckButton" parent="TabBar/BASIC/Margin/VBox/WrapLine"]
layout_mode = 2

[node name="LineNumber" type="HBoxContainer" parent="TabBar/BASIC/Margin/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="TabBar/BASIC/Margin/VBox/LineNumber"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "显示行数"

[node name="CheckButton" type="CheckButton" parent="TabBar/BASIC/Margin/VBox/LineNumber"]
layout_mode = 2

[node name="HighlightLine" type="HBoxContainer" parent="TabBar/BASIC/Margin/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="TabBar/BASIC/Margin/VBox/HighlightLine"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "高亮当前行"

[node name="CheckButton" type="CheckButton" parent="TabBar/BASIC/Margin/VBox/HighlightLine"]
layout_mode = 2

[node name="FontSize" type="HBoxContainer" parent="TabBar/BASIC/Margin/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="TabBar/BASIC/Margin/VBox/FontSize"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "字体大小"

[node name="HSlider" type="HSlider" parent="TabBar/BASIC/Margin/VBox/FontSize"]
custom_minimum_size = Vector2(120, 20)
layout_mode = 2
max_value = 3.0
tick_count = 4
ticks_on_borders = true

[node name="DocumentDir" type="HBoxContainer" parent="TabBar/BASIC/Margin/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="TabBar/BASIC/Margin/VBox/DocumentDir"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "默认文档位置"

[node name="Button" type="Button" parent="TabBar/BASIC/Margin/VBox/DocumentDir"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "~/Documents"
text_overrun_behavior = 1

[node name="Sep2" type="Control" parent="TabBar/BASIC/Margin/VBox"]
visible = false
custom_minimum_size = Vector2(6, 60)
layout_mode = 2
size_flags_vertical = 3

[node name="Sep3" type="ColorRect" parent="TabBar/BASIC/Margin/VBox"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
color = Color(0.165656, 0.165656, 0.165656, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="TabBar/BASIC/Margin/VBox"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 2
bbcode_enabled = true
text = "[color=888888]小提示：
连续打字不要超过一个小时，
如果感到头晕目眩或不适，可以停下来休息一下[/color]
"
context_menu_enabled = true
selection_enabled = true

[node name="Sep" type="ColorRect" parent="TabBar/BASIC/Margin/VBox"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
color = Color(0.165656, 0.165656, 0.165656, 1)

[node name="Reset" type="HBoxContainer" parent="TabBar/BASIC/Margin/VBox"]
layout_mode = 2
alignment = 1

[node name="Button" type="Button" parent="TabBar/BASIC/Margin/VBox/Reset"]
custom_minimum_size = Vector2(100, 20)
layout_mode = 2
focus_mode = 0
text = "重置所有选项"

[node name="KEY" type="Control" parent="TabBar"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Margin" type="MarginContainer" parent="TabBar/KEY"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="TabBar/KEY/Margin"]
layout_mode = 2

[node name="LABEL_title" type="HBoxContainer" parent="TabBar/KEY/Margin/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="TabBar/KEY/Margin/VBox/LABEL_title"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "快捷键"
horizontal_alignment = 1

[node name="NewFile" type="HBoxContainer" parent="TabBar/KEY/Margin/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="TabBar/KEY/Margin/VBox/NewFile"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "新建文件"

[node name="Button" type="Button" parent="TabBar/KEY/Margin/VBox/NewFile"]
custom_minimum_size = Vector2(100, 20)
layout_mode = 2
text = "Ctrl+N"

[node name="OpenFile" type="HBoxContainer" parent="TabBar/KEY/Margin/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="TabBar/KEY/Margin/VBox/OpenFile"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "打开文件"

[node name="Button" type="Button" parent="TabBar/KEY/Margin/VBox/OpenFile"]
custom_minimum_size = Vector2(100, 20)
layout_mode = 2
text = "Ctrl+O"

[node name="SaveFile" type="HBoxContainer" parent="TabBar/KEY/Margin/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="TabBar/KEY/Margin/VBox/SaveFile"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "保存文件"

[node name="Button" type="Button" parent="TabBar/KEY/Margin/VBox/SaveFile"]
custom_minimum_size = Vector2(100, 20)
layout_mode = 2
text = "Ctrl+S"

[node name="OpenSetting" type="HBoxContainer" parent="TabBar/KEY/Margin/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="TabBar/KEY/Margin/VBox/OpenSetting"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "打开设置面板"

[node name="Button" type="Button" parent="TabBar/KEY/Margin/VBox/OpenSetting"]
custom_minimum_size = Vector2(100, 20)
layout_mode = 2
text = "Ctrl+'"

[node name="Sep4" type="ColorRect" parent="TabBar/KEY/Margin/VBox"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
color = Color(0.165656, 0.165656, 0.165656, 1)

[node name="SwitchEffect" type="HBoxContainer" parent="TabBar/KEY/Margin/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="TabBar/KEY/Margin/VBox/SwitchEffect"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "切换特效开关"

[node name="Button" type="Button" parent="TabBar/KEY/Margin/VBox/SwitchEffect"]
custom_minimum_size = Vector2(100, 20)
layout_mode = 2
text = "Ctrl+/"

[node name="Sep2" type="Control" parent="TabBar/KEY/Margin/VBox"]
custom_minimum_size = Vector2(6, 120)
layout_mode = 2
size_flags_vertical = 3

[node name="Sep3" type="ColorRect" parent="TabBar/KEY/Margin/VBox"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
color = Color(0.165656, 0.165656, 0.165656, 1)

[node name="Reset" type="HBoxContainer" parent="TabBar/KEY/Margin/VBox"]
layout_mode = 2
alignment = 1

[node name="Button" type="Button" parent="TabBar/KEY/Margin/VBox/Reset"]
custom_minimum_size = Vector2(100, 20)
layout_mode = 2
focus_mode = 0
text = "重置所有快捷键"

[node name="EFFECT" type="Control" parent="TabBar"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="Margin" type="MarginContainer" parent="TabBar/EFFECT"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="TabBar/EFFECT/Margin"]
layout_mode = 2

[node name="Level" type="VBoxContainer" parent="TabBar/EFFECT/Margin/VBox"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2

[node name="Label" type="Label" parent="TabBar/EFFECT/Margin/VBox/Level"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "特效开关"
horizontal_alignment = 1

[node name="Control" type="MarginContainer" parent="TabBar/EFFECT/Margin/VBox/Level"]
layout_mode = 2
theme_override_constants/margin_left = 90
theme_override_constants/margin_right = 90

[node name="HSlider" type="HSlider" parent="TabBar/EFFECT/Margin/VBox/Level/Control"]
visible = false
custom_minimum_size = Vector2(120, 20)
layout_mode = 2
max_value = 1.0
tick_count = 2
ticks_on_borders = true

[node name="CheckButton" type="CheckButton" parent="TabBar/EFFECT/Margin/VBox/Level/Control"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Sep" type="ColorRect" parent="TabBar/EFFECT/Margin/VBox"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
color = Color(0.165656, 0.165656, 0.165656, 1)

[node name="Audio" type="HBoxContainer" parent="TabBar/EFFECT/Margin/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="TabBar/EFFECT/Margin/VBox/Audio"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "音效"

[node name="CheckButton" type="CheckButton" parent="TabBar/EFFECT/Margin/VBox/Audio"]
layout_mode = 2

[node name="ScreenShake" type="HBoxContainer" parent="TabBar/EFFECT/Margin/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="TabBar/EFFECT/Margin/VBox/ScreenShake"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "屏幕震动"

[node name="CheckButton" type="CheckButton" parent="TabBar/EFFECT/Margin/VBox/ScreenShake"]
layout_mode = 2

[node name="Combo" type="HBoxContainer" parent="TabBar/EFFECT/Margin/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="TabBar/EFFECT/Margin/VBox/Combo"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "连击"

[node name="CheckButton" type="CheckButton" parent="TabBar/EFFECT/Margin/VBox/Combo"]
layout_mode = 2

[node name="ComboShot" type="HBoxContainer" parent="TabBar/EFFECT/Margin/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="TabBar/EFFECT/Margin/VBox/ComboShot"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "连击终结效果"

[node name="CheckButton" type="CheckButton" parent="TabBar/EFFECT/Margin/VBox/ComboShot"]
layout_mode = 2

[node name="CharEffect" type="HBoxContainer" parent="TabBar/EFFECT/Margin/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="TabBar/EFFECT/Margin/VBox/CharEffect"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "字符动画"

[node name="CheckButton" type="CheckButton" parent="TabBar/EFFECT/Margin/VBox/CharEffect"]
layout_mode = 2

[node name="CharParticle" type="HBoxContainer" parent="TabBar/EFFECT/Margin/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="TabBar/EFFECT/Margin/VBox/CharParticle"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "字符特效"

[node name="CheckButton" type="CheckButton" parent="TabBar/EFFECT/Margin/VBox/CharParticle"]
layout_mode = 2

[node name="EnterEffect" type="HBoxContainer" parent="TabBar/EFFECT/Margin/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="TabBar/EFFECT/Margin/VBox/EnterEffect"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "回车效果"

[node name="CheckButton" type="CheckButton" parent="TabBar/EFFECT/Margin/VBox/EnterEffect"]
layout_mode = 2

[node name="DeleteEffect" type="HBoxContainer" parent="TabBar/EFFECT/Margin/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="TabBar/EFFECT/Margin/VBox/DeleteEffect"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "删除效果"

[node name="CheckButton" type="CheckButton" parent="TabBar/EFFECT/Margin/VBox/DeleteEffect"]
layout_mode = 2

[node name="EndSep" type="ColorRect" parent="TabBar/EFFECT/Margin/VBox"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
color = Color(0.165656, 0.165656, 0.165656, 1)

[node name="ColorRect" type="ColorRect" parent="TabBar/EFFECT/Margin/VBox/EndSep"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -187.0
offset_top = -289.0
offset_right = 189.0
offset_bottom = -5.0
grow_horizontal = 2
color = Color(0, 0, 0, 0.286275)

[node name="INPUT" type="Control" parent="TabBar"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="Margin" type="MarginContainer" parent="TabBar/INPUT"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="TabBar/INPUT/Margin"]
layout_mode = 2

[node name="LABEL_title" type="HBoxContainer" parent="TabBar/INPUT/Margin/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="TabBar/INPUT/Margin/VBox/LABEL_title"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "内置输入法"
horizontal_alignment = 1

[node name="bottom_icon" type="HBoxContainer" parent="TabBar/INPUT/Margin/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="TabBar/INPUT/Margin/VBox/bottom_icon"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "底部图标"

[node name="CheckButton" type="CheckButton" parent="TabBar/INPUT/Margin/VBox/bottom_icon"]
layout_mode = 2

[node name="PageSize" type="HBoxContainer" parent="TabBar/INPUT/Margin/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="TabBar/INPUT/Margin/VBox/PageSize"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "每页字数"

[node name="LineEdit" type="SpinBox" parent="TabBar/INPUT/Margin/VBox/PageSize"]
custom_minimum_size = Vector2(100, 20)
layout_mode = 2
min_value = 3.0
max_value = 9.0
value = 5.0

[node name="LABEL_shortcut" type="HBoxContainer" parent="TabBar/INPUT/Margin/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="TabBar/INPUT/Margin/VBox/LABEL_shortcut"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "快捷键"
horizontal_alignment = 1

[node name="SwitchKey" type="HBoxContainer" parent="TabBar/INPUT/Margin/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="TabBar/INPUT/Margin/VBox/SwitchKey"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "中英文切换"

[node name="Button" type="Button" parent="TabBar/INPUT/Margin/VBox/SwitchKey"]
custom_minimum_size = Vector2(100, 20)
layout_mode = 2
text = "Shift+Esc"

[node name="PrevPage" type="HBoxContainer" parent="TabBar/INPUT/Margin/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="TabBar/INPUT/Margin/VBox/PrevPage"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "上一页"

[node name="Button" type="Button" parent="TabBar/INPUT/Margin/VBox/PrevPage"]
custom_minimum_size = Vector2(100, 20)
layout_mode = 2
text = "["

[node name="NextPage" type="HBoxContainer" parent="TabBar/INPUT/Margin/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="TabBar/INPUT/Margin/VBox/NextPage"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "下一页"

[node name="Button" type="Button" parent="TabBar/INPUT/Margin/VBox/NextPage"]
custom_minimum_size = Vector2(100, 20)
layout_mode = 2
text = "]"

[node name="ABOUT" type="Control" parent="TabBar"]
visible = false
layout_mode = 2
metadata/_tab_index = 4

[node name="Margin" type="MarginContainer" parent="TabBar/ABOUT"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 20

[node name="ScrollContainer" type="ScrollContainer" parent="TabBar/ABOUT/Margin"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="TabBar/ABOUT/Margin/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="RichTextLabel" type="RichTextLabel" parent="TabBar/ABOUT/Margin/ScrollContainer/VBox"]
custom_minimum_size = Vector2(200, 260)
layout_mode = 2
size_flags_vertical = 3
focus_mode = 2
bbcode_enabled = true
text = "[center][shake][font s=22]wild writer 0.02[/font][/shake]
by xianrenak[/center]

下载（Win, Linux, Mac, Web）:
[url]http://xianrenak.itch.io/wildwriter[/url]
[url]http://github.com/xianrenak/wildwriter[/url]

B站 （发布更新）:
[url]http://space.bilibili.com/589805968[/url]"
fit_content = true
context_menu_enabled = true
selection_enabled = true

[node name="Sep2" type="ColorRect" parent="TabBar/ABOUT/Margin/ScrollContainer/VBox"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
color = Color(0.165656, 0.165656, 0.165656, 1)

[node name="Sep" type="Control" parent="TabBar/ABOUT/Margin/ScrollContainer/VBox"]
custom_minimum_size = Vector2(1, 20)
layout_mode = 2

[node name="RichTextLabel2" type="RichTextLabel" parent="TabBar/ABOUT/Margin/ScrollContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 2
bbcode_enabled = true
fit_content = true
context_menu_enabled = true
selection_enabled = true
